--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -7,7 +7,7 @@
 
     <title>Blog | {%block title%}{% endblock %}</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Antic|Crimson+Text|Raleway|Space+Mono|Work+Sans|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Nunito|Droid+Sans|Share+Tech+Mono" rel="stylesheet">
     <script src="https://use.fontawesome.com/3aa6c402c1.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
