--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -3,16 +3,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blog | {%block title%}{% endblock %}</title>
+    <title>Blog | {% block title %}{% endblock %}</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Antic|Crimson+Text|Raleway|Space+Mono|Work+Sans|Montserrat|Nova+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Nunito|Droid+Sans|Share+Tech+Mono" rel="stylesheet">
     <script src="https://use.fontawesome.com/3aa6c402c1.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
     <link rel="stylesheet" href="{% static 'blog/css/materialize.min.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'blog/css/prism.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/css/prism-onedark.css' %}">
     {# <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/monokai.min.css">#}
 
     <style media="screen">
