--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -65,7 +65,7 @@
   <div class="row">
     <div class="col s12 l8 cards-container">
 
-      <div class="card z-depth-2">
+      <div class="card z-depth-3">
         <div class="card-image">
             <img src="{% static 'blog/img/django.jpg' %}">
             <div class="nuevo">
@@ -91,7 +91,7 @@
             <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 3</div>
           </div>
         </div>
-        <div class="card-category grey darken-3 center">
+        <div class="card-category grey lighten-2 center">
           <div class="chip">Django</div>
           <div class="chip">Python</div>
           <div class="chip">Framework</div>
@@ -101,7 +101,7 @@
 
 
 
-      <div class="card z-depth-2">
+      <div class="card z-depth-3">
         <div class="card-image">
           <img src="{% static 'blog/img/redes.jpg' %}">
         </div>
@@ -124,16 +124,16 @@
             <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 50</div>
           </div>
         </div>
-        <div class="card-category grey darken-3 center">
-          <div class="chip z-depth-1">IA</div>
-          <div class="chip z-depth-1">Python</div>
-          <div class="chip z-depth-1">Avanzado</div>
+        <div class="card-category grey lighten-2 center">
+          <div class="chip">IA</div>
+          <div class="chip">Python</div>
+          <div class="chip">Avanzado</div>
         </div>
       </div>
 
 
 
-       <div class="card z-depth-2">
+       <div class="card z-depth-3">
          <div class="card-image">
            <img src="{% static 'blog/img/unity.jpg' %}">
          </div>
@@ -156,15 +156,15 @@
              <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 30</div>
            </div>
          </div>
-         <div class="card-category grey darken-3 center">
-           <div class="chip z-depth-1">Videojuegos</div>
-           <div class="chip z-depth-1">Unity</div>
+         <div class="card-category grey lighten-2 center">
+           <div class="chip">Videojuegos</div>
+           <div class="chip">Unity</div>
          </div>
        </div>
 
 
 
-       <div class="card z-depth-2">
+       <div class="card z-depth-3">
          <div class="card-image">
            <img src="{% static 'blog/img/r.png' %}">
          </div>
@@ -187,9 +187,9 @@
              <div class="col s4 grey-text text-darken-2"><i class="fa fa-comment"></i> 30</div>
            </div>
          </div>
-         <div class="card-category grey darken-3 center">
-           <div class="chip z-depth-1">R</div>
-           <div class="chip z-depth-1">Estadistica</div>
+         <div class="card-category grey lighten-2 center">
+           <div class="chip">R</div>
+           <div class="chip">Estadistica</div>
          </div>
        </div>
     </div>
@@ -213,8 +213,8 @@
               </div>
               <div class="col s9">
                 <div class="tags">
-                  <div class="chip z-depth-1">Herramientas</div>
-                  <div class="chip z-depth-1">Atom</div>
+                  <div class="chip">Herramientas</div>
+                  <div class="chip">Atom</div>
                 </div>
                 <a href="#!" class="article-link"><h5>Mejores paquetes de Atom</h5></a>
               </div>
@@ -235,8 +235,8 @@
               </div>
               <div class="col s9">
                 <div class="tags">
-                  <div class="chip z-depth-1">Nodejs</div>
-                  <div class="chip z-depth-1">Backend</div>
+                  <div class="chip">Nodejs</div>
+                  <div class="chip">Backend</div>
                 </div>
                 <a href="#!" class="article-link"><h5>Implementar una API basica con Nodejs</h5></a>
               </div>
@@ -259,8 +259,8 @@
               </div>
               <div class="col s9">
                 <div class="tags">
-                  <div class="chip z-depth-1">Laravel</div>
-                  <div class="chip z-depth-1">Php</div>
+                  <div class="chip">Laravel</div>
+                  <div class="chip">Php</div>
                 </div>
                 <a href="#!" class="article-link"><h5>Introduccion a Laravel </h5></a>
               </div>
