--- a/BlogComputacion/blog/static/blog/css/main.css
+++ b/BlogComputacion/blog/static/blog/css/main.css
@@ -1,6 +1,6 @@
 html
 {
-  font-family: "Droid Sans";
+  font-family: "Nunito";
   color: #3f3f3f;
 }
 
@@ -42,7 +42,7 @@ overflow: hidden;
 .chip
 {
   text-transform: uppercase;
-  border-radius:10px;
+  /*border-radius:10px;*/
 }
 
 body
@@ -53,13 +53,13 @@ body
 
 .brand-logo
 {
-  font-family: "Raleway";
+  font-family: "Montserrat";
 }
 
 
 h1, h2, h3, h4, h5, h6, .card-title
 {
-  font-family: "Raleway";
+  font-family: "Montserrat";
   font-weight: bold;
 }
 
@@ -122,6 +122,9 @@ nav.main-nav
   border:1px solid rgb(228, 228, 228);
   transition: all 0.3s ease;
   font-weight: 400;
+  text-transform: uppercase;
+  border-radius:10px;
+
 }
 .categorias .chip.active, .chip:hover
 {
@@ -153,11 +156,34 @@ nav.main-nav
 }
 
 
-.raised
+.raised-1
+{
+  margin-top:-35px;
+  margin-bottom:15px;
+}
+
+
+.raised-2
 {
   margin-top: -70px;
   margin-bottom:30px;
 }
+
+
+.back-1
+{
+  position: relative;
+  z-index: -1;
+}
+
+.back-2
+{
+  position:relative;
+  z-index:1;
+}
+
+
+
 
 .card-title-all
 {
@@ -429,27 +455,6 @@ a.article-link:hover
   left: 0;
 }
 
-
-
-/*.nuevo::before
-{
-  content:"";
-  position:absolute;
-  background: black;
-  top:30px;
-  left:-20px;
-  padding:20px;
-  width:50%;
-  height:50%;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 700;
-  color:white;
-  z-index:-2;
-  transform: rotate(45deg);
-}*/
-
-
 .card
 {
   overflow:visible !important;
@@ -492,4 +497,34 @@ code
   padding:3px;
   color:#2196F3;
   font-family: 'Share Tech Mono'!important;
+}
+
+.user-chip
+{
+  text-transform: none;
+}
+
+
+.comment-text
+{
+  display: inline-block;
+  /*background:#f3f3f3;*/
+  padding:10px;
+  border-radius: 5px;
+  position:relative;
+  margin-top:10px;
+}
+
+.comment-text::after
+{
+  content: "";
+  position:absolute;
+  top:-8px;
+  left:10px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+
+  border-bottom: 10px solid #e0e0e0;
 }
