--- a/BlogComputacion/blog/templates/blog/main.html
+++ b/BlogComputacion/blog/templates/blog/main.html
@@ -7,7 +7,7 @@
 
     <title>Blog | {%block title%}{% endblock %}</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Nunito|Droid+Sans|Share+Tech+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito|Droid+Sans|Share+Tech+Mono" rel="stylesheet">
     <script src="https://use.fontawesome.com/3aa6c402c1.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -93,26 +93,9 @@
 
 
     <footer class="page-footer grey darken-3">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
       <div class="footer-copyright grey darken-4">
         <div class="container center">
-        Blog de Computacion &copy; 2017
+        P entonces Q &copy; 2017
         </div>
       </div>
     </footer>
