--- a/BlogComputacion/blog/templates/blog/pages/index.html
+++ b/BlogComputacion/blog/templates/blog/pages/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 
-<nav class="raised">
+<nav class="raised-2">
   <div class="nav-wrapper grey darken-3 z-depth-2">
     <form method="GET">
       <div class="input-field">
