Ya se pueden eliminar comentario peeero dañe tu diseño de comnerarios. Te dejo que acomodes eso para que se vea bonito, esclavo

--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -77,6 +77,14 @@
                      </div>
                      <div class="comment-text grey lighten-2 ">{{ comment.text|linebreaks }}</div>
                    </div>
+                   {% if perms.Post.add_Post or comment.author == user %}
+                   <div class="post-body">
+                     <p>
+                       <a class="btn btn-default" href="{% url 'removeComment' comment.id %}">Eliminar</a>
+                     </p>
+                     <br>
+                   </div>
+                   {% endif %}
                  </div>
                  {% empty %}
                  <br>
