--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -20,7 +20,7 @@
                <span>Por {{post.author.username}}</span>
                <span>publicado: {{post.created_at}}</span>
                <span><i class="fa fa-eye"></i> 1.5k</span>
-               <span><i class="fa fa-comment"></i> 50</span>
+               <span><i class="fa fa-comment"></i> {{ post.comments.count }}</span>
              </p>
              <h2>{{ post.title }}</h2>
              <div class="divider"></div>
