Ahora tambien en la lista de todos los post se puede ver cuantos comentarios hay en cada post respectivamente. Estoy onFire okno jajajajajajaaj

--- a/BlogComputacion/blog/templates/blog/pages/all_post_detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/all_post_detail.html
@@ -25,7 +25,7 @@
                 <span>Por {{entrada.author.username}}.</span>
                 <span>publicado: {{entrada.created_at}}</span>
                 <span><i class="fa fa-eye"></i> 1.5k</span>
-                <span><i class="fa fa-comment"></i> 50</span>
+                <span><i class="fa fa-comment"></i> {{ entrada.comments.count }}</span>
               </small>
             </p>
             <br>
