Ya esta hecho lo de las vistas

--- a/BlogComputacion/blog/templates/blog/pages/all_post_detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/all_post_detail.html
@@ -24,7 +24,7 @@
               <small>
                 <span>Por {{entrada.author.username}}.</span>
                 <span>publicado: {{entrada.created_at}}</span>
-                <span><i class="fa fa-eye"></i> 1.5k</span>
+                <span><i class="fa fa-eye"></i> {{ entrada.cont_vist }}</span>
                 <span><i class="fa fa-comment"></i> {{ entrada.comments.count }}</span>
               </small>
             </p>
