--- a/BlogComputacion/blog/templates/blog/pages/detail.html
+++ b/BlogComputacion/blog/templates/blog/pages/detail.html
@@ -19,7 +19,7 @@
              <p class="grey-text card-info">
                <span>Por {{post.author.username}}</span>
                <span>publicado: {{post.created_at}}</span>
-               <span><i class="fa fa-eye"></i> 1.5k</span>
+               <span><i class="fa fa-eye"></i> {{ post.cont_vist }}</span>
                <span><i class="fa fa-comment"></i> {{ post.comments.count }}</span>
              </p>
              <h2>{{ post.title }}</h2>
