--- a/BlogComputacion/blog/templates/blog/pages/crear_post.html
+++ b/BlogComputacion/blog/templates/blog/pages/crear_post.html
@@ -58,7 +58,7 @@
         <div class="input-field col s12">
           <select multiple>
             <option value="" disabled selected>Elige Categoria: </option>
-            {% for var in Category.objects.all %}
+            {% for var in category %}
             <option>{{ var.name }}</option>
             {% endfor %}
           </select>
