--- a/BlogComputacion/blog/templates/blog/main2.html
+++ b/BlogComputacion/blog/templates/blog/main2.html
@@ -21,7 +21,7 @@
         position:relative;
       }
 
-      select
+      .editormd-dialog-container select
       {
         display:block;
       }
@@ -113,6 +113,7 @@
       $(".button-collapse").sideNav();
       $('.dropdown-button').dropdown();
       $('.modal').modal();
+      $('select').material_select();
 
 
 
